# SpaceExplorer

./: LICENSE  Main.cpp  README.md  meson.build
Data/: Optiuni.txt
Data/Maps/: Grup Local.txt
Data/Shaders/: HitShader.frag  Starfield.frag
Docs/: Space Explorer.docx
Include/: CircleShapeNode.h  Common.hpp  Game.h  Game.hpp  Global.h  ResourceHandler.h  ResourceHolder.h  ResourceManager.h  ResourceManager.inl  SceneNode.h  SpriteNode.h  World.h
Include/Base/: Game.hpp  ResourceHandler.hpp  ResourceHandler.inl
Include/EntitySystem/: Component.hpp  Entity.hpp  EntityManager.hpp
Include/GUI/: Button.hpp  Component.hpp  Container.hpp  Label.hpp
Include/Gameplay/: Entity.hpp  Galaxy.hpp  Orbiter.hpp  Spaceship.hpp  System.hpp
Include/Graphics/: AnimatedSphere.hpp  AnimatedSprite.hpp  Starfield.hpp  Window.h  Window.hpp
Include/Player/: KeyBindings.h  Player.h
Include/Spaceships/: Missile.h  Spaceship.h
Include/State/: Paused.hpp  Running.hpp  State.hpp  StateManager.hpp  TitleScreen.hpp
Include/StateManager/: Context.hpp  IState.hpp  MainMenuState.hpp  PlayingState.hpp  StateManager.hpp  States.hpp  TitleScreenState.hpp
Include/Utilities/: Benchmarker.hpp  Logging.hpp  MathUtils.hpp  MetadataParser.h  NonCopyable.hpp  SFMLUtils.hpp  Utilities.hpp
Include/Utility/: Context.hpp  NonCopyable.hpp  OptionsManager.hpp  Parser.hpp  ResourceHolder.hpp  Tools.hpp  (+1 more)
Release/: Space Explorer.iobj  Space Explorer.ipdb
Saves/: demoworld.txt
Source/: Game.cpp  Main.cpp
Src/: CircleShapeNode.cpp  Game.cpp  Main.cpp  SceneNode.cpp  SpriteNode.cpp  World.cpp
(+61 files in other folders)
